kubernetes/doc-home-cluster/apps/downloads/qbittorrent/tools/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: qbtools
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: qbtools
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress:
    # qBittorrent
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: qbittorrent
      ports:
        - port: 8080
          protocol: TCP
    # kube-dns
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    # Internet
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
